--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = "1.0.75"
 image = "0.24.7"
 lab = "0.11.0"
 ndarray = "0.15.6"
-opencv = "0.84.5"
+#opencv = "0.84.5"
 rand = "0.8.5"
 tch = "0.13.0"
 tensorboard-rs = "0.5.9"
