--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,5 @@ lab = "0.11.0"
 ndarray = "0.15.6"
 #opencv = "0.84.5"
 rand = "0.8.5"
-tch = "0.13.0"
+tch = {version="0.13.0",features=["download-libtorch"]}
 tensorboard-rs = "0.5.9"
