--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.75"
 image = "0.24.7"
 lab = "0.11.0"
+lazy_static = "1.4.0"
 ndarray = "0.15.6"
 #opencv = "0.84.5"
 rand = "0.8.5"
